CHATS_SIT/force-app/main/default/objects/T_SBSD_CASE_PHONE__c.object
<CustomObject>
    <description>Information about the phone numbers collected for a household</description>
    <fields>
        <fullName>DTE_BEGIN_EFFV__c</fullName>
        <label>Effective Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_END_EFFV__c</fullName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CDE_TYPE_PHONE__c</fullName>
        <description>Phone Number Type</description>
        <label>Phone Number Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00159</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>IDN_CASE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Case ID</description>
        <label>Case ID</label>
        <referenceTo>T_SBSD_CASE__c</referenceTo>
        <relationshipLabel>Case Phone</relationshipLabel>
        <relationshipName>T_SBSD_CASE14</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ID External</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NBR_PHONE_EXTN__c</fullName>
        <description>Phone Number Ext.</description>
        <label>Phone Number Ext.</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NBR_PHONE__c</fullName>
        <description>Phone Number</description>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <label>Case Phone</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Phone Number ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Phone</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Begin_date_validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND( (!ISNEW()) , DTE_BEGIN_EFFV__c  &gt;  DTE_END_EFFV__c )</errorConditionFormula>
        <errorMessage>Begin date cannot be greater than the end date.</errorMessage>
    </validationRules>
</CustomObject>